--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ueh_db
+spring.datasource.url=jdbc:mysql://localhost:3306/dolphins_db
 spring.datasource.username=root
 spring.datasource.password=georgy
